allow user-defined charset

--- a/index_stub.html
+++ b/index_stub.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="{{ charset }}" />
     <title>Index of /{{ path }}</title>
 </head>
 
